--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     // get json
     document.getElementById('getJSON').onclick = function () {
       const json = editor.get()
-      alert(JSON.stringify(json, null, 2))
+      document.getElementById('jsonInterface').value = JSON.stringify(json, null, 2);
     }
   </script>
 </body>
