--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 </head>
 
 <body>
+  <textarea id="jsonInterface" rows="4" cols="50">Place your JSON here!</textarea>
   <p>
-    <button id="setJSON">Set JSON</button>
-    <button id="getJSON">Get JSON</button>
+    <button id="setJSON">Load JSON</button>
+    <button id="getJSON">Download JSON</button>
   </p>
-  <textarea id="jsonInterface" rows="4" cols="50">
-    Place your JSON here!
-  </textarea>
   <div id="jsoneditor"></div>
 
   <script>
@@ -41,6 +39,18 @@
     document.getElementById('getJSON').onclick = function () {
       const json = editor.get()
       document.getElementById('jsonInterface').value = JSON.stringify(json, null, 2);
+      downloadObjectAsJson(json, 'formattedSpec')
+    }
+
+    // download json
+    function downloadObjectAsJson(exportObj, exportName) {
+      var dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(exportObj));
+      var downloadAnchorNode = document.createElement('a');
+      downloadAnchorNode.setAttribute("href", dataStr);
+      downloadAnchorNode.setAttribute("download", exportName + ".json");
+      document.body.appendChild(downloadAnchorNode); // required for firefox
+      downloadAnchorNode.click();
+      downloadAnchorNode.remove();
     }
   </script>
 </body>
